# exaterm

./: .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  web-e2e.yml
assets/: README.md  export-icons.sh
assets/icons/hicolor/: index.theme
crates/exaterm/: Cargo.toml
crates/exaterm-core/: Cargo.toml
crates/exaterm-core/src/: daemon.rs  file_watch.rs  lib.rs  model.rs  observation.rs  proto.rs  runtime.rs  synthesis.rs  terminal_stream.rs
crates/exaterm-core/src/process/: linux.rs  macos.rs  mod.rs
crates/exaterm-gtk/: Cargo.toml
crates/exaterm-gtk/src/: actions.rs  beachhead.rs  main.rs  remote.rs  style.rs  terminal_adapter.rs  ui.rs  widgets.rs
crates/exaterm-macos/: Cargo.toml
crates/exaterm-macos/resources/: Info.plist
crates/exaterm-macos/src/: app_delegate.rs  app_state.rs  battlefield_view.rs  beachhead.rs  event_bridge.rs  focus_view.rs  grid_renderer.rs  key_map.rs  main.rs  menu.rs  session_io.rs  style.rs  terminal_state.rs  terminal_view.rs  window.rs
crates/exaterm-swiftterm/: Cargo.toml  build.rs
crates/exaterm-swiftterm/src/: ffi.rs  lib.rs  terminal.rs
crates/exaterm-swiftterm/swift/Sources/ExatermTerminalBridge/: Bridge.swift
crates/exaterm-types/: Cargo.toml
crates/exaterm-types/src/: lib.rs  model.rs  proto.rs  synthesis.rs
crates/exaterm-ui/: Cargo.toml
crates/exaterm-ui/src/: action.rs  app_state.rs  beachhead.rs  css.rs  layout.rs  lib.rs  presentation.rs  supervision.rs  terminal.rs  theme.rs  workspace_view.rs
crates/exaterm-web/: Cargo.toml  build.rs  package-lock.json  package.json  playwright.config.ts
crates/exaterm-web/e2e/: basic.spec.ts  clipboard.spec.ts  features.spec.ts  helpers.ts  terminal-clipping.spec.ts  terminal-reattach.spec.ts  terminal-ux.spec.ts  ui-fixes.spec.ts
crates/exaterm-web/frontend/: package-lock.json  package.json
crates/exaterm-web/frontend/src/: main.ts  protocol.ts  terminal.ts  ui.ts
crates/exaterm-web/frontend/static/: app.css  index.html
crates/exaterm-web/src/: main.rs  relay.rs  routes.rs  websocket.rs
crates/exaterm/src/: actions.rs  beachhead.rs  main.rs  remote.rs  style.rs  supervision.rs  terminal_adapter.rs  ui.rs  widgets.rs
docs/: ux-spec.md
judgement/: app.md  target.yaml
scripts/: package-macos.sh
src/: daemon.rs  demo.rs  lib.rs  model.rs  observation.rs  procfs.rs  runtime.rs  supervision.rs  synthesis.rs  terminal_stream.rs  ui.rs
tests/: workspace_state.rs
