[package]
name = "exaterm"
version = "0.1.0"
edition = "2021"

[dependencies]
gio = "0.21"
glib = "0.21"
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
libc = "0.2"
libadwaita = { version = "0.8.0", features = ["gtk_v4_20", "v1_8"] }
proc-macro-crate = "=3.3.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
vte4 = { version = "0.9.0", features = ["v0_78"] }

[build-dependencies]
system-deps = "=7.0.3"
