[workspace]
members = [
    "crates/exaterm-types",
    "crates/exaterm-core",
    "crates/exaterm-ui",
    "crates/exaterm-gtk",
    "crates/exaterm-macos",
    "crates/exaterm-swiftterm",
    "crates/exatermd",
    "crates/exaterm-web",
]
default-members = [
    "crates/exaterm-types",
    "crates/exaterm-core",
    "crates/exaterm-ui",
    "crates/exaterm-gtk",
    "crates/exaterm-macos",
    "crates/exaterm-swiftterm",
    "crates/exatermd",
]
resolver = "2"
