[package]
name = "exaterm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
exaterm-types = { path = "../exaterm-types" }
libc = "0.2"
notify = "7"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
