[package]
name = "exaterm-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
exaterm-types = { path = "../exaterm-types" }
exaterm-core = { path = "../exaterm-core" }
exaterm-ui = { path = "../exaterm-ui" }
gio = "0.21"
glib = "0.21"
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
libc = "0.2"
libadwaita = { version = "0.8.0", features = ["gtk_v4_20", "v1_8"] }
portable-pty = "0.8"
pangocairo = "0.21.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vte4 = { version = "0.9.0", features = ["v0_78"] }

[build-dependencies]
system-deps = "=7.0.3"
