[package]
name = "exaterm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
exaterm-types = { path = "../exaterm-types" }
exaterm-core = { path = "../exaterm-core" }
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
include_dir = "0.7"
serde_json = "1"
